# datum

./: .gitignore  LICENSE  MSSQL.session.sql  README.md  ROADMAP.md  core.tree  dump.txt  justfile  mise.toml  treefmt.toml  typos.toml
repositories/python/: .gitignore  README.md  path.txt  pyproject.toml  workspace.toml
repositories/python/bases/datum/greet_fastapi/: __init__.py  core.py
repositories/python/components/datum/greeting/: __init__.py
repositories/python/components/datum/kafka/: __init__.py
repositories/python/components/datum/logger/: __init__.py
repositories/python/projects/baraa_warehouse/: pyproject.toml
repositories/python/projects/polylith_example/: pyproject.toml
repositories/python/test/bases/datum/my_example_base/: test_core.py
repositories/python/test/components/datum/greeting/: test_core.py
repositories/python/test/components/datum/kafka/: test_core.py
repositories/python/test/components/datum/logline/: test_core.py
repositories/rust/: Cargo.toml
repositories/rust/bases/cli/: Cargo.toml
repositories/rust/bases/imdb/: Cargo.toml
repositories/rust/bases/imdb-dataget/: Cargo.toml
repositories/rust/bases/imdb-dataget/src/: data.rs  main.rs  utils.rs
repositories/rust/bases/imdb-dataget/src/cli/: default.rs  mod.rs
repositories/rust/bases/imdb-dataget/src/cli/commands/: check.rs  clean.rs  download copy.rs  download.rs  extract.rs  mod.rs  purge.rs
repositories/rust/bases/imdb-dataget/src/data/: default.rs  mod.rs
repositories/rust/bases/imdb-dataget/src/data/path/: files.rs  home.rs  mod.rs
repositories/rust/bases/imdb/src/: cli.rs  lib.rs  trash.rs  utils.rs
repositories/rust/bases/imdb/src/commands/: mod.rs
repositories/rust/bases/imdb/src/commands/datasets/: check.rs  download copy.rs  download.rs  extract.rs  ingest.rs  mod.rs  purge.rs
repositories/rust/bases/imdb/src/review/: cli copy.rs  utils.rs
repositories/rust/components/converter/: Cargo.toml
repositories/rust/components/converter/src/: lib.rs
repositories/rust/components/converter/src/parquet/: conversion copy.rs  conversion.rs  mod.rs
repositories/rust/components/downloader/: Cargo.toml
repositories/rust/components/downloader/review/: downloader.rs  error.rs  filename.rs  lib.rs  preview.rs  task.rs  ui.rs
repositories/rust/components/downloader/src/: Untitled-1.txt  config.rs  core copy.rs  core.rs  default.rs  error.rs  events.rs  filename.rs  lib.rs  preview.rs  progress.rs  task.rs  tmp.rs  utils.rs  validation.rs
repositories/rust/components/downloader/tests/: helper.rs  integration.rs
repositories/rust/components/erks/: Cargo.toml  README.md
repositories/rust/components/erks/docs/: context.md  dir-create.md  dir-delete.md  dir-read.md  file-copy.md  file-create.md  file-delete.md  file-move.md  file-read.md  file-write.md  path-already-exists.md  path-not-found.md  path-permission-denied.md
repositories/rust/components/erks/examples/: comprehensive.rs  comprehensive.rs.review  fancy.rs.review  simple.rs
repositories/rust/components/erks/macros/: Cargo.toml
repositories/rust/components/erks/macros/src/: lib copy.rs  lib.rs
repositories/rust/components/erks/src/: category.rs  context.rs  error.rs  implementation.rs  lib.rs  result.rs  severity.rs
repositories/rust/components/erks/src/export/: mod.rs  re_miette.rs  re_owo.rs  re_tracing.rs
repositories/rust/components/erks/tests/: integration.rs  miette.rs
repositories/rust/components/error/: Cargo.toml
repositories/rust/components/error/src/: lib.rs
repositories/rust/components/error/src/types/: error.rs  mod.rs  severity.rs  validation.rs
repositories/rust/components/error/src/types/data/: definition.rs  display.rs  implementation.rs  mod.rs  prelude.rs
repositories/rust/components/error/src/types/filesystem/: definition.rs  display.rs  implementation.rs  mod.rs
repositories/rust/components/error/src/types/validation/: definition.rs  display.rs  implementation.rs  mod.rs
repositories/rust/components/extractor/: Cargo.toml
repositories/rust/components/extractor/src/: lib.rs
repositories/rust/components/imdb/: Cargo.toml
repositories/rust/components/imdb/src/: core.rs  dataset.rs  error.rs  info.rs  lib.rs
repositories/rust/components/imdb/src/path/: files.rs  home.rs  mod.rs  paths.rs
repositories/rust/components/util/: Cargo.toml
repositories/rust/components/util/src/: delimiter.rs  file copy.rs  file.rs  lib.rs  scope.rs  timer.rs
repositories/rust/components/util/src/examples/: mod.rs
repositories/rust/components/utils/: Cargo.toml
repositories/rust/components/utils/src/: delimiter.rs  lib.rs  print.rs  timer.rs
repositories/rust/components/utils/src/examples/: timer.rs
repositories/rust/projects/imdb/: Cargo.toml
repositories/rust/projects/imdb/src/: config.rs  lib.rs  main.rs  utils.rs
repositories/rust/projects/imdb/src/config/: ingestion.rs  mod.rs
repositories/rust/projects/imdb/src/ingestion/: chunks.rs  config.rs  consolidation.rs  mod.rs  orchestration.rs  paths.rs  validation.rs
repositories/rust/projects/imdb/src/pipeline/: mod.rs
repositories/rust/projects/imdb/src/pipeline/bronze/: mod.rs  titles.rs
repositories/rust/projects/imdb/src/retrieval/: mod.rs
repositories/rust/projects/imdb/src/utilities/: extract.rs  ingest.rs  mod.rs  transform.rs
repositories/rust/projects/imdb/src/utilities/ingestion/: delimiter.rs  mod.rs
repositories/rust/projects/playground/: Cargo.toml
repositories/rust/projects/playground/src/: config.rs  error.rs  lib.rs  main.rs  test_miette.rs
repositories/rust/projects/playground/src/via_deltalake/: mod.rs
repositories/rust/projects/playground/src/via_deltalake/tasks/: mod.rs
repositories/rust/projects/playground/src/via_deltalake/utilities/: export.rs  mod.rs
repositories/rust/projects/playground/src/via_polars/bronze/: profiles.rs  (+2 more)
repositories/rust/projects/test/: Cargo.toml
repositories/rust/projects/test/src/: config.rs  main.rs  mode.rs
repositories/rust/projects/test/src/via_deltalake/: mod.rs
repositories/rust/projects/test/src/via_polars/: mod.rs
(+68 files in other folders)
