[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python"
version = "0.1.0"
description = "A unified lab for exploring, engineering, and analyzing data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
]


[tool.uv]
managed = true
dev-dependencies = [
  # "mypy~=1.17.0",
  "polylith-cli>=1.28.0",
  "pytest~=8.4.1",
  "ruff~=0.12.5",
]

[tool.uv.workspace]
members = ["projects/*"]

[dependency-groups]
dev = [
    "polylith-cli>=1.30.1",
]

[tool.hatch.build]
dev-mode-dirs = ["components", "bases", "development", "."]

[tool.polylith.bricks]
"bases/datum/greet_fastapi" = "datum/greet_fastapi"
"components/datum/greeting" = "datum/greeting"
"components/datum/logline" = "datum/logline"
"components/datum/kafka" = "datum/kafka"

[tool.ruff]
exclude = [
  ".git",
  ".github",
  "__pycache__",
  ".mypy_cache",
  ".ruff_cache",
  "dist",
  ".venv",
  "./development/*.py",
]
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
