[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Craig 'Craole' Cole <craole@tuta.io>"]
license = "MIT"
description = "Various utilities for development."
homepage = "https://craole.cc/utils"
repository = "https://github.com/craole-cc/datum"
categories = ["command-line-utilities", "development-tools"]

[workspace]
members = [
  "bases/imdb",
  "components/converter",
  "components/downloader",
  "components/erks",
  # "components/erks/macros",
  "components/extractor",
  "components/imdb",
  "components/utils",
  # "development",
  # "projects",
  "projects/imdb",
  "projects/playground",
]
resolver = "2"

[workspace.lints.rust]
unsafe_code = { level = "deny", priority = -1 }
unused = { level = "allow", priority = -2 }

[workspace.dependencies]
# -- Internal
utils = { path = "components/utils" }
downloader = { path = "components/downloader" }
erks = { path = "components/erks", features = ["fancy"] }
extractor = { path = "components/extractor" }
imdb-cli = { path = "bases/imdb" }
imdb-dataset = { path = "components/imdb" }

# -- Error Handling
thiserror = "2.0.12"
miette = { version = "7.6.0", features = ["derive"] }
backtrace = "0.3.75"
anyhow = "1.0.91"

# -- Tracing & Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# -- Macros & Constructors
# cfg-if = "1.0.1"
heck = "0.5.0"
paste = "1.0.15"
proc-macro2 = "1"
quote = "1"
syn = { version = "2.0.104", features = ["full"] }

# -- Sync & Async
async-trait = "0.1.88"
futures = "0.3.31"
once_cell = "1.20.2"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"

# -- Serialization & Config Management
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
serde_with = { version = "3", features = ["macros"] }
# toml = "0.9.2"
# toml_edit = "0.23.1"
# config = "0.15.13"

# -- Network
reqwest = { version = "0.12.22", features = ["json", "blocking", "stream"] }
urlencoding = "2.1.3"
url = "2.5.4"

# -- Threading
# rayon = "1.7"

# -- Data Management
deltalake = { version = "0.27.0", features = ["datafusion"] }
# datafusion = "49.0.0"
# polars = { version = "0.50.0", features = [
#   "lazy",
#   "temporal",
#   "describe",
#   "json",
#   "parquet",
#   "dtype-datetime",
# ] }
phf = { version = "0.12.1", features = ["macros"] }

# -- Command-line Interface
clap = { version = "4.5.42", features = ["derive", "cargo"] }

# -- System Information
# battery = "0.7.8"
chrono = { version = "0.4.41", features = ["serde"] }
# crossterm = "0.29.0"
# current_dir = "0.1.1"
directories = "6.0.0"
# iana-time-zone = "0.1.61"
# sysinfo = "0.36.0"
# termsize = "0.1.9"
tempfile = "3.2.0"
