[package]
name = "imdb-dataset-cli"
default-run = "imdb-dataset-cli"
description = "Command line interface for datum"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = ["cli", "command", "line", "interface", "data"]

[lints]
workspace = true

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
directories = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
downloader = { path = "../../components/downloader" }
extractor = { path = "../../components/extractor" }
