[package]
name = "downloader"
description = "Download files from the internet"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = ["download", "file", "filesystem", "tool"]

[lints]
workspace = true

[dependencies]
reqwest = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }


[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"
