[package]
name = "error"
description = "Datum - Error Library"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = ["error"]

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
tokio = { workspace = true }
polars = { workspace = true }
paste = { workspace = true }
miette = { workspace = true }
