[package]
name = "utils"
description = "Datum - Simple Utilities"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = ["utilities"]

[lints]
workspace = true

[dependencies]
erks = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
