[package]
name = "imdb"
default-run = "imdb"
description = "Datum IMDB Project"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = ["cli", "command", "line", "interface", "data"]

[lints]
workspace = true

[dependencies]
#| Intenal
downloader = { workspace = true }
erks = { workspace = true }
extractor = { workspace = true }
imdb-cli = { workspace = true }
imdb-dataset = { workspace = true }
util = { workspace = true }

#| External
deltalake = { version = "0.27.0", features = ["datafusion"] }
directories = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
serde = { workspace = true }
tokio = { workspace = true }
# regex = { workspace = true }
# tracing-subscriber = { workspace = true }
