[package]
name = "playground"
# default-run = "playground"
description = "Playground"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = ["cli", "command", "line", "interface", "data"]

[lints]
workspace = true

[dependencies]
#| Intenal
utils = { workspace = true }

#| External

anyhow = { workspace = true }
deltalake = { workspace = true }
directories = { workspace = true }
futures = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
regex = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
