[package]
name = "test"
default-run = "test"
description = "Playground"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
keywords = ["cli", "command", "line", "interface", "data"]

[lints]
workspace = true

[dependencies]
polars = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
deltalake = { workspace = true }
directories = { workspace = true }
futures = { workspace = true }
