[package]
name = "macros"
description = "Allows simplified implementation with proc-macro constructors"
version = { workspace = true }
edition = { workspace = true }
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2.0.104", features = ["full", "extra-traits"] }
heck = "0.5.0"
